# cpp_project_template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.MD  package.xml
.github/: rename_project.sh  template.yml
.github/workflows/: ROS1.yml  ROS2.yml  linter.yml  rename_project.yml
docs/: index.md
docs/images/: images.md
include/project_name/compat/: ros.h
src/compat/: ros.cpp
